--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <div>Index Page</div>
     <a href="./React/space-trip/public/index.html">Go to space trip</a>
+    <p>copy that</p>
 </body>
 </html>
