space-trip react project setting

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div>Index Page</div>
-    <a href="">Go to space trip</a>
+    <a href='./react/space-trip/public/index.html'>Go to space trip</a>
 </body>
 </html>
