--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <div>Index Page</div>
     <a href='./react/space-trip/public/index.html'>Go to space trip</a>
+    <a href='./react/test/react-gh-pages/public/index.html'>test</a>
 </body>
 </html>
